[tool.poetry]
name = "yandex_direct"
version = "0.1.0"
description = ""
authors = ["Kostya <serafi97@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
